fix: refresh test passing now

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,11 @@
 # development | production
 NODE_ENV=development
 
+# 162KB in bytes
+LOG_MAX_SIZE=162000
+# 'error', 'warn', 'log', 'debug', 'verbose'
+LOG_LEVEL=verbose
+
 PORT=4000
 
 POSTGRES_USER="postgres"
